chore(Sidebar): fix double scrollbar bug (#556)

--- a/kit/src/layout/sidebar/style.scss
+++ b/kit/src/layout/sidebar/style.scss
@@ -31,6 +31,7 @@
     // -ms-overflow-style: none;  /* IE and Edge */
     // scrollbar-width: none;  /* Firefox */
     overflow-y: scroll;
+    overflow-x: hidden;
   }
 
   &.hidden {
